--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
     <!-- Chef's Message Section -->
     <section class="chef-message">
         <div class="chef-content">
-            <p class="chef-quote">"I believe people have the right to understand what they're eating and why it's prepared that way. Great food shouldn't be mysterious - it should be memorable for all the right reasons."</p>
+            <p class="chef-quote">"True hospitality means anticipating needs before they're expressed. Every technique I've mastered serves this single purpose: your complete satisfaction."o</p>
             <p class="chef-signature">— Chef Juliano & CASA DELIZIOSA Team</p>
         </div>
     </section>
@@ -1266,7 +1266,7 @@
                                             border-left: 5px solid #8B0000;
                                         ">
                                             <p style="font-size: 1.3rem; color: #2C1810; line-height: 1.6; margin-bottom: 1rem;">
-                                                "Curiosity is the first ingredient in every great meal. Thank you for taking the time to understand what we're building."
+                                                "Your interest fuels our commitment to excellence. We'll share the stories behind every flavor."
                                             </p>
                                             <p style="color: #8B0000; font-weight: bold;">— Chef Juliano</p>
                                         </div>
