--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
     <!-- Chef's Message Section -->
     <section class="chef-message">
         <div class="chef-content">
-            <p class="chef-quote">"True hospitality means anticipating needs before they're expressed. Every technique I've mastered serves this single purpose: your complete satisfaction."o</p>
+            <p class="chef-quote">"True hospitality means anticipating needs before they're expressed. Every technique I've mastered serves this single purpose: your complete satisfaction."</p>
             <p class="chef-signature">— Chef Juliano & CASA DELIZIOSA Team</p>
         </div>
     </section>
